--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <p>
-        Here are some of my favorite recipes. These have come from various cookbooks, and they've all been enjoyed by many others. Bon appetit.
+        Here are some of my favorite recipes. These have come from various cookbooks, and they've all been enjoyed by many others. Bon appétit.
     </p>
     <p>
         <ul>
