Fix relative link to recipes.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </p>
     <p>
         <ul>
-            <li><a href="/recipes/fritters.html">Thomas Keller's Apple Fritters</a></li>
-            <li><a href="/recipes/eggs.html">Yotam Ottolenghi's Baked Eggs with Yogurt and Chile</a></li>
-            <li><a href="/recipes/chilaquiles.html">Gabriela Cámara's Chilaquiles</a></li>    
+            <li><a href="recipes/fritters.html">Thomas Keller's Apple Fritters</a></li>
+            <li><a href="recipes/eggs.html">Yotam Ottolenghi's Baked Eggs with Yogurt and Chile</a></li>
+            <li><a href="recipes/chilaquiles.html">Gabriela Cámara's Chilaquiles</a></li>    
         </ul>
     </p>
 </body>
