Added fritters image, steps, and ingredients.

--- a/recipes/fritters.html
+++ b/recipes/fritters.html
@@ -8,31 +8,36 @@
 </head>
 <body>
     <h1>Thomas Keller's Apple Fritters</h1>
-    <img alt="picture of apple fritters" src="" />
-    <h2>Description of picture</h2>
-    <p>Two paragraph</p>
+    <img alt="picture of apple fritters" src="../img/fritters.jpg"  width="600px" height="675px"/>
+    <h2>Warm, fluffy apple fritters!</h2>
+    <p>This is my favorite fall dessert when apples are fresh and it's chilly outside.</p>
+    <p>Feel free to serve with vanilla ice cream or with a honey drizzle.</p>
     <p>
         <h3>Ingredients</h3>
         <ul>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
+            <li>1 cup all-purpose flour</li>
+            <li>2 tbsp granulated sugar</li>
+            <li>1 1/2 tspn baking powder</li>
+            <li>1/2 tspn ground cinnamon</li>
+            <li>1/2 tspn kosher salt</li>
+            <li>1 large egg</li>
+            <li>1/2 cup plus 1 tbsp whole milk</li>
+            <li>3 large Fuji, Gala, or Golden Delicious apples</li>
+            <li>Canola oil</li>
+            <li>Powdered sugar</li>
         </ul>
         <h3>Steps</h3>
         <ol>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
+            <li>Whisk together flour, sugar, baking powder, cinnamon, and salt in medium bowl.</li>
+            <li>Lightly beat eggs and milk. Whisk into dry ingredients.</li>
+            <li>Peel apples and slice the apples from core. Cut the apples into matchsticks.</li>
+            <li>Fold apples into batter.</li>
+            <li>Heat about 1 1/2 inches of oil to 325°F in a deep pot.</li>
+            <li>Set a cooling rack over a baking sheet and line with paper towel.</li>
+            <li>Using two forks lift up about 5 apple matchsticks and add to hot oil.</li>
+            <li>Fry for 5 minutes and transfer to paper towels.</li>
+            <li>Repeat in batches.</li>
+            <li>Sprinkle generously with powdered sugar and serve.</li>
         </ol>
     </p>
 </body>
