Linked chilaquiles and egg pics with description

--- a/recipes/chilaquiles.html
+++ b/recipes/chilaquiles.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Gabriela Cámara's Chilaquiles</h1>
-    <img alt="picture of chilaquiles" src="" />
-    <h2>Description of picture</h2>
+    <img alt="picture of chilaquiles" src="../img/chilaquiles.jpg" />
+    <h2>Fried eggs on chilaquiles verdes.</h2>
     <p>Two paragraph</p>
     <p>
         <h3>Ingredients</h3>
