--- a/recipes/eggs.html
+++ b/recipes/eggs.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Yotam Ottolenghi's Baked Eggs with Yogurt and Chile</h1>
-    <img alt="picture of baked eggs" src="" />
-    <h2>Description of picture</h2>
+    <img alt="picture of baked eggs" src="../img/eggs.jpg" />
+    <h2>Baked eggs topped with yogurt and chile!</h2>
     <p>Two paragraph</p>
     <p>
         <h3>Ingredients</h3>
