Added descriptive paragraphs to chilaquiles and eggs

--- a/recipes/chilaquiles.html
+++ b/recipes/chilaquiles.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Gabriela Cámara's Chilaquiles</h1>
     <img alt="picture of chilaquiles" src="../img/chilaquiles.jpg" />
-    <h2>Fried eggs on chilaquiles verdes.</h2>
-    <p>Two paragraph</p>
+    <h2>Fried eggs on chilaquiles verdes!</h2>
+    <p>These chilaquiles are a perfect weekend breakfast.</p>
+    <p>Feel free to top with avocado and your choice of crumblly cheese.</p>
     <p>
         <h3>Ingredients</h3>
         <ul>
