--- a/recipes/eggs.html
+++ b/recipes/eggs.html
@@ -10,7 +10,8 @@
     <h1>Yotam Ottolenghi's Baked Eggs with Yogurt and Chile</h1>
     <img alt="picture of baked eggs" src="../img/eggs.jpg" />
     <h2>Baked eggs topped with yogurt and chile!</h2>
-    <p>Two paragraph</p>
+    <p>This is the perfect Turkish inspired brunch.</p>
+    <p>This is the perfect dish for two!</p>
     <p>
         <h3>Ingredients</h3>
         <ul>
