Added ingredients to chilaquiles and eggs

--- a/recipes/chilaquiles.html
+++ b/recipes/chilaquiles.html
@@ -15,14 +15,15 @@
     <p>
         <h3>Ingredients</h3>
         <ul>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
+            <li>1 tbsp plus 1 cup safflower oil</li>
+            <li>1 qt salsa verde</li>
+            <li>12 corn tortillas, cut into 8 wedges</li>
+            <li>1/4 crème fraîche</li>
+            <li>8 to 12 eggs</li>
+            <li>1/2 cup white onion, finely minced</li>
+            <li>1/2 cup cilantro</li>
+            <li>1/2 feta cheese</li>
+            <li>2 avocados cut into 8 slices</li>
         </ul>
         <h3>Steps</h3>
         <ol>
