--- a/recipes/eggs.html
+++ b/recipes/eggs.html
@@ -15,14 +15,16 @@
     <p>
         <h3>Ingredients</h3>
         <ul>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
-            <li>Ingredient 1</li>
+            <li>3/4 lb arugula</li>
+            <li>2 tbsp olive oil</li>
+            <li>Salt</li>
+            <li>4 eggs</li>
+            <li>3/4 cup Greek yogurt</li>
+            <li>1 garlic clove, crushed</li>
+            <li>4 tbsp unsalted butter</li>
+            <li>1/2 tsp sweet paprika</li>
+            <li>Pinch of chile flakes</li>
+            <li>6 sage leaves, shredded</li>
         </ul>
         <h3>Steps</h3>
         <ol>
