Added steps to chilaquiles and egg recipes

--- a/recipes/chilaquiles.html
+++ b/recipes/chilaquiles.html
@@ -27,14 +27,14 @@
         </ul>
         <h3>Steps</h3>
         <ol>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
+            <li>Warm 1 tbsp oil over medium hear. Pour the salsa into the pan and simmer for 10 to 15 minutes.</li>
+            <li>Warm 1 cup oil. Line a plate with paper towels.</li>
+            <li>Fry tortillas wedges in batches for 2 to 3 minutes. Remove and place on paper towels.</li>
+            <li>Fry eggs in oil for 1 min.</li>
+            <li>Turn off heat of salsa pan. Add crème fraîche to salsa and mix.</li>
+            <li>Drop chips into sauce and coat without breaking chips.</li>
+            <li>Spread sauce and chips onto plate. Top with 2 fried eggs per plate.</li>
+            <li>Top with onion, cilantro, feta, and avocado.</li>
         </ol>
     </p>
 </body>
