--- a/recipes/eggs.html
+++ b/recipes/eggs.html
@@ -28,14 +28,15 @@
         </ul>
         <h3>Steps</h3>
         <ol>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
-            <li>Step 1</li>
+            <li>Preheat oven to 300°F. </li>
+            <li>Place arugula, oil, and some salt in large pan. Saute on medium for 5 minutes.</li>
+            <li>Transfer to ovenproof dish. Make four deep indentations in the arugula.</li>
+            <li>Place eggs into indentations. Bake eggs and arugula for 10 to 15 minutes, until whites are set.</li>
+            <li>Mix yogurt with garlic and salt.</li>
+            <li>Melt butter in small pan. Add the sweet paprika and chile flakes and fry for 1 to 2 minutes.</li>
+            <li>Add the sage to the butter for a few seconds.</li>
+            <li>Remove eggs from oven. Spoon yogurt over the arugla and pour hot chile butter over the arugla and eggs.</li>
+            <li>Serve immediately.</li>
         </ol>
     </p>
 </body>
