Added classes to index

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anthony's Favorite Recipes</title>
-    <link rel="stylesheet" href="/css/style.css"
+    <link rel="stylesheet" href="css/style.css"
 </head>
-<body>
-    <h1>Odin Recipes</h1>
-    <p>
+<body class="body">
+    <h1 class="heading">Odin Recipes</h1>
+    <p class="para text">
         Here are some of my favorite recipes. These have come from various cookbooks, and they've all been enjoyed by many others. Bon appétit.
     </p>
     <p>
-        <ul>
+        <ul class="list text">
             <li><a href="recipes/fritters.html">Thomas Keller's Apple Fritters</a></li>
             <li><a href="recipes/eggs.html">Yotam Ottolenghi's Baked Eggs with Yogurt and Chile</a></li>
             <li><a href="recipes/chilaquiles.html">Gabriela Cámara's Chilaquiles</a></li>    
