Fixed index class

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anthony's Favorite Recipes</title>
-    <link rel="stylesheet" href="css/style.css"
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body class="body">
     <h1 class="heading">Odin Recipes</h1>
-    <p class="para text">
+    <p class="index text">
         Here are some of my favorite recipes. These have come from various cookbooks, and they've all been enjoyed by many others. Bon appétit.
     </p>
     <p>
