Added classes to recipes

--- a/recipes/chilaquiles.html
+++ b/recipes/chilaquiles.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriela Cámara's Chilaquiles</title>
+    <link rel="stylesheet" href="../css/style.css"/>
 </head>
-<body>
-    <h1>Gabriela Cámara's Chilaquiles</h1>
-    <img alt="picture of chilaquiles" src="../img/chilaquiles.jpg" />
-    <h2>Fried eggs on chilaquiles verdes!</h2>
-    <p>These chilaquiles are a perfect weekend breakfast.</p>
-    <p>Feel free to top with avocado and your choice of crumblly cheese.</p>
+<body class="body">
+    <h1 class="heading">Gabriela Cámara's Chilaquiles</h1>
+    <img class="centerimage" alt="picture of chilaquiles" src="../img/chilaquiles.jpg" />
+    <h2 class="imgcaption">Fried eggs on chilaquiles verdes!</h2>
+    <p class="para text">These chilaquiles are a perfect weekend breakfast.</p>
+    <p class="para text">Feel free to top with avocado and your choice of crumblly cheese.</p>
     <p>
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="ingredientsheading">Ingredients</h3>
+        <ul class="ingredients list">
             <li>1 tbsp plus 1 cup safflower oil</li>
             <li>1 qt salsa verde</li>
             <li>12 corn tortillas, cut into 8 wedges</li>
@@ -25,8 +26,8 @@
             <li>1/2 feta cheese</li>
             <li>2 avocados cut into 8 slices</li>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="stepsheading">Steps</h3>
+        <ol class="steps list">
             <li>Warm 1 tbsp oil over medium hear. Pour the salsa into the pan and simmer for 10 to 15 minutes.</li>
             <li>Warm 1 cup oil. Line a plate with paper towels.</li>
             <li>Fry tortillas wedges in batches for 2 to 3 minutes. Remove and place on paper towels.</li>
