--- a/recipes/eggs.html
+++ b/recipes/eggs.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yotam Ottolenghi's Baked Eggs with Yogurt and Chile</title>
+    <link rel="stylesheet" href="../css/style.css"/>
 </head>
-<body>
-    <h1>Yotam Ottolenghi's Baked Eggs with Yogurt and Chile</h1>
-    <img alt="picture of baked eggs" src="../img/eggs.jpg" />
-    <h2>Baked eggs topped with yogurt and chile!</h2>
-    <p>This is the perfect Turkish inspired brunch.</p>
-    <p>This is the perfect dish for two!</p>
+<body class="body">
+    <h1 class="heading">Yotam Ottolenghi's Baked Eggs with Yogurt and Chile</h1>
+    <img class="centerimage" alt="picture of baked eggs" src="../img/eggs.jpg" />
+    <h2 class="imgcaption">Baked eggs topped with yogurt and chile!</h2>
+    <p class="para text">This is the perfect Turkish inspired brunch.</p>
+    <p class="para text">This is the perfect dish for two!</p>
     <p>
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="ingredientsheading">Ingredients</h3>
+        <ul class="ingredients list">
             <li>3/4 lb arugula</li>
             <li>2 tbsp olive oil</li>
             <li>Salt</li>
@@ -26,8 +27,8 @@
             <li>Pinch of chile flakes</li>
             <li>6 sage leaves, shredded</li>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="stepsheading">Steps</h3>
+        <ol class="steps list">
             <li>Preheat oven to 300°F. </li>
             <li>Place arugula, oil, and some salt in large pan. Saute on medium for 5 minutes.</li>
             <li>Transfer to ovenproof dish. Make four deep indentations in the arugula.</li>
