--- a/recipes/fritters.html
+++ b/recipes/fritters.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thomas Keller's Apple Fritters</title>
+    <link rel="stylesheet" href="../css/style.css"/>
 </head>
-<body>
-    <h1>Thomas Keller's Apple Fritters</h1>
-    <img alt="picture of apple fritters" src="../img/fritters.jpg"  width="600px" height="675px"/>
-    <h2>Warm, fluffy apple fritters!</h2>
-    <p>This is my favorite fall dessert when apples are fresh and it's chilly outside.</p>
-    <p>Feel free to serve with vanilla ice cream or with a honey drizzle.</p>
+<body class="body">
+    <h1 class="heading">Thomas Keller's Apple Fritters</h1>
+    <img class="centerimage" alt="picture of apple fritters" src="../img/fritters.jpg"  width="600px" height="675px"/>
+    <h2 class="imgcaption">Warm, fluffy apple fritters!</h2>
+    <p class="para text">This is my favorite fall dessert when apples are fresh and it's chilly outside.</p>
+    <p class="para text">Feel free to serve with vanilla ice cream or with a honey drizzle.</p>
     <p>
-        <h3>Ingredients</h3>
-        <ul>
+        <h3 class="ingredientsheading">Ingredients</h3>
+        <ul class="ingredients list">
             <li>1 cup all-purpose flour</li>
             <li>2 tbsp granulated sugar</li>
             <li>1 1/2 tspn baking powder</li>
@@ -26,8 +27,8 @@
             <li>Canola oil</li>
             <li>Powdered sugar</li>
         </ul>
-        <h3>Steps</h3>
-        <ol>
+        <h3 class="stepsheading">Steps</h3>
+        <ol class="steps list">
             <li>Whisk together flour, sugar, baking powder, cinnamon, and salt in medium bowl.</li>
             <li>Lightly beat eggs and milk. Whisk into dry ingredients.</li>
             <li>Peel apples and slice the apples from core. Cut the apples into matchsticks.</li>
